# CNegtuneServer

./: .gitignore  CMakeLists.txt  main.cpp
features/: crossPlatformsFunctionalities.cpp  files.cpp  loadServerFunctionalities.cpp  menu.cpp  serverFileConfiguration.cpp
headers/: CNegtuneServerDirectives.h  crossPlatformsFunctionalities.h  files.h  loadServerFunctionalities.h  menu.h  serverFileConfiguration.h
